[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/interface/menu/menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/interface/interface_commons/button/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://common/menu_icons/menu_icons.png" type="Texture" id=3]
[ext_resource path="res://scenes/interface/menu_gameover/MenuGameOver.gd" type="Script" id=4]
[ext_resource path="res://scenes/interface/interface_commons/coin_counter/CoinCounter.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=1]
resource_local_to_scene = true
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
resource_local_to_scene = true
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 16, 16 )

[node name="MenuGameOver" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="LabelTitle" parent="ColorRect" index="0"]
text = "Play again?"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect" index="1"]
margin_left = 16.0
margin_top = 28.0
margin_right = 139.0
margin_bottom = 41.0

[node name="LabelFinalScore" type="Label" parent="ColorRect/HBoxContainer" index="0"]
margin_right = 84.0
margin_bottom = 13.0
text = "Final Score:"

[node name="LabelScoreValue" type="Label" parent="ColorRect/HBoxContainer" index="1"]
margin_left = 88.0
margin_right = 123.0
margin_bottom = 13.0
rect_min_size = Vector2( 35, 0 )
text = "00000"
clip_text = true

[node name="VBoxContainer" parent="ColorRect" index="2"]
margin_top = 56.0
custom_constants/separation = 15

[node name="ButtonRestart" parent="ColorRect/VBoxContainer" index="0" instance=ExtResource( 2 )]
margin_top = 19.0
margin_bottom = 38.0
text = "Restart"
icon = SubResource( 1 )

[node name="ButtonGoBack" parent="ColorRect/VBoxContainer" index="1" instance=ExtResource( 2 )]
margin_top = 53.0
margin_bottom = 72.0
text = "Main Menu"
icon = SubResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect" index="3"]
margin_left = 16.0
margin_top = 38.0
margin_right = 194.0
margin_bottom = 70.0
custom_constants/separation = -10

[node name="Label" type="Label" parent="ColorRect/HBoxContainer2" index="0"]
margin_top = 9.0
margin_right = 42.0
margin_bottom = 22.0
text = "Coins:"

[node name="CoinContainer" parent="ColorRect/HBoxContainer2" index="1" instance=ExtResource( 5 )]
margin_left = 32.0
margin_right = 129.0
margin_bottom = 32.0

[connection signal="pressed" from="ColorRect/VBoxContainer/ButtonRestart" to="." method="_on_ButtonRestart_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ButtonGoBack" to="." method="_on_ButtonGoBack_pressed"]
